# suitchi

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/aarch64/: arm.cpp  arm.h
src/hle/kernel/: KObject.cpp  KObject.h  KThread.cpp  KThread.h  Scheduler.cpp  Scheduler.h
src/hle/memory/: memory.cpp  memory.h
src/loader/: nro.cpp  nro.h
src/util/: defs.h
